--- a/inleiding.tex
+++ b/inleiding.tex
@@ -12,13 +12,23 @@ Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backsla
 
 \textcite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\autocite{Creeger2009}.
 
+Deze bachelorproef handelt over Citrix XenApp en Citrix XenDesktop. Ik ga dieper in op de verschillen tussen deze twee producten en wil hierbij de case van Orbid oplossen. Citrix XenApp en Citrix XenDesktop bieden een veilige omgeving aan voor virtuele applicaties en desktops.
+
+XenDesktop is een voorbeeld van VDI, oftewel Virtual Desktop Infrastructure. Het plaatsen van krachtige systemen die dan benaderd worden op afstand is deels een gevolg van BYOD, wat "Bring Your Own Device" betekent. Werknemers moeten steeds vaker overal kunnen werken en daarbij kunnen ze niet altijd rekenen op een heel krachtige computer. Door systemen beschikbaar te maken via Remote Desktop Services kunnen de werknemers overal een krachtige computer ter beschikking hebben. Dankzij applicatievirtualisatie in de vorm van Citrix XenApp kunnen Windowsapplicaties benaderd worden vanaf elk toestel met een internetverbinding.
+
+
+
 \section{Stand van zaken}
 \label{sec:stand-van-zaken}
 
 %% TODO: deze sectie (die je kan opsplitsen in verschillende secties) bevat je
 %% literatuurstudie. Vergeet niet telkens je bronnen te vermelden!
 
-\lipsum[7-20]
+Citrix Systems
+Citrix is een softwarebedrijf dat server, applicatie, desktopvirtualisatie en software as a service(SaaS) levert.
+
+Wat is VDI?
+Virtual Desktop Infrastructure oftewel VDI is een techniek waarbij desktops in een virtuele omgeving gedraaid worden. Deze desktops draaien op een server. Je kan de desktop bereiken via een thin-client, pc, laptop of tablet. Een belangrijke opmerking hierbij is dat het lijkt alsof je bezig bent met een lokale installatie. Een voorbeeld van Virtual Desktop Infrastructure is in dit geval XenDesktop, hierbij gaat het om desktopvirtualisatie. XenApp is per definitie geen voorbeeld van VDI, het is namelijk een voorbeeld van applicatievirtualisatie, die applicaties draaien natuurlijk ook op een desktop waardoor je het ook kan zien als een soort van desktopvirtualisatie.
 
 \section{Probleemstelling en Onderzoeksvragen}
 \label{sec:onderzoeksvragen}
@@ -30,6 +40,12 @@ Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backsla
 %% Wees zo concreet mogelijk bij het formuleren van je
 %% onderzoeksvra(a)g(en). Een onderzoeksvraag is trouwens iets waar nog
 %% niemand op dit moment een antwoord heeft (voor zover je kan nagaan).
+Dit onderzoek moet het voor bedrijven makkelijker maken om te kiezen tussen Citrix XenApp of Citrix XenDesktop. Het maken van een juiste keuze is belangrijk omdat XenDesktop veel duurder is dan XenApp. Een specifieke case heb ik gevonden in het bedrijf Orbid dat 90 medewerkers telt. De onderzoeksvragen zijn:
+
+
+\item Wat zijn de verschillen tussen Citrix XenApp en Citrix
+XenDesktop?
+\item Welk Citrix product is voor Orbid het interessantst?
 
 \section{Opzet van deze bachelorproef}
 \label{sec:opzet-bachelorproef}
