--- a/inleiding.tex
+++ b/inleiding.tex
@@ -25,7 +25,12 @@ XenDesktop is een voorbeeld van VDI, oftewel Virtual Desktop Infrastructure. Het
 %% literatuurstudie. Vergeet niet telkens je bronnen te vermelden!
 
 Citrix Systems
-Citrix is een softwarebedrijf dat server, applicatie, desktopvirtualisatie en software as a service(SaaS) levert.
+Citrix is een softwarebedrijf dat server, applicatie, desktopvirtualisatie en software as a service(SaaS) levert. Citrix werd opgericht in 1989 door wijlen Edward E. lacobucci in Richardson, Texas.
+
+Geschiedenis Citrix
+
+
+
 
 Wat is VDI?
 Virtual Desktop Infrastructure oftewel VDI is een techniek waarbij desktops in een virtuele omgeving gedraaid worden. Deze desktops draaien op een server. Je kan de desktop bereiken via een thin-client, pc, laptop of tablet. Een belangrijke opmerking hierbij is dat het lijkt alsof je bezig bent met een lokale installatie. Een voorbeeld van Virtual Desktop Infrastructure is in dit geval XenDesktop, hierbij gaat het om desktopvirtualisatie. XenApp is per definitie geen voorbeeld van VDI, het is namelijk een voorbeeld van applicatievirtualisatie, die applicaties draaien natuurlijk ook op een desktop waardoor je het ook kan zien als een soort van desktopvirtualisatie.
@@ -42,10 +47,10 @@ Virtual Desktop Infrastructure oftewel VDI is een techniek waarbij desktops in e
 %% niemand op dit moment een antwoord heeft (voor zover je kan nagaan).
 Dit onderzoek moet het voor bedrijven makkelijker maken om te kiezen tussen Citrix XenApp of Citrix XenDesktop. Het maken van een juiste keuze is belangrijk omdat XenDesktop veel duurder is dan XenApp. Een specifieke case heb ik gevonden in het bedrijf Orbid dat 90 medewerkers telt. De onderzoeksvragen zijn:
 
-
-\item Wat zijn de verschillen tussen Citrix XenApp en Citrix
-XenDesktop?
+\begin{itemize}
+\item Wat zijn de verschillen tussen Citrix XenApp en Citrix XenDesktop?
 \item Welk Citrix product is voor Orbid het interessantst?
+\end{itemize}
 
 \section{Opzet van deze bachelorproef}
 \label{sec:opzet-bachelorproef}
