voorwoord en inleiding update

--- a/inleiding.tex
+++ b/inleiding.tex
@@ -12,9 +12,11 @@ Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backsla
 
 \textcite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\autocite{Creeger2009}.
 
-Deze bachelorproef handelt over Citrix XenApp en Citrix XenDesktop. Ik ga dieper in op de verschillen tussen deze twee producten en wil hierbij de case van Orbid oplossen. Citrix XenApp en Citrix XenDesktop bieden een veilige omgeving aan voor virtuele applicaties en desktops.
+Deze bachelorproef handelt over Citrix XenApp en Citrix XenDesktop. Citrix XenApp en Citrix XenDesktop bieden een veilige omgeving aan voor virtuele applicaties en desktops. Ik ga dieper in op de verschillen tussen deze twee producten en wil hierbij de case van Orbid oplossen. Orbid is een bedrijf dat 90 medewerkers telt en ik wil nagaan welk product voor hun het interessantst is.
 
-XenDesktop is een voorbeeld van VDI, oftewel Virtual Desktop Infrastructure. Het plaatsen van krachtige systemen die dan benaderd worden op afstand is deels een gevolg van BYOD, wat "Bring Your Own Device" betekent. Werknemers moeten steeds vaker overal kunnen werken en daarbij kunnen ze niet altijd rekenen op een heel krachtige computer. Door systemen beschikbaar te maken via Remote Desktop Services kunnen de werknemers overal een krachtige computer ter beschikking hebben. Dankzij applicatievirtualisatie in de vorm van Citrix XenApp kunnen Windowsapplicaties benaderd worden vanaf elk toestel met een internetverbinding.
+Dankzij applicatievirtualisatie in de vorm van Citrix XenApp kunnen Windowsapplicaties benaderd worden vanaf elk toestel met een internetverbinding. De applicaties worden dus gehost op een gedeelde computer waarbij de gebruiker enkel moet beschikken over Citrix Receiver en een internetvebrinding. Citrix Receiver is de client van Citrix die u toegang verleent tot XenApp- en Xendesktop-omgevingen.
+
+XenDesktop is een voorbeeld van VDI, oftewel Virtual Desktop Infrastructure. Je krijgt dus toegang tot een volledige desktop die op afstand gehost wordt. XenApp en XendDesktop kunnen perfect gecombineerd worden. Het plaatsen van krachtige systemen die dan benaderd worden op afstand is deels een gevolg van BYOD, wat "Bring Your Own Device" betekent. Werknemers moeten steeds vaker overal kunnen werken en daarbij kunnen ze niet altijd rekenen op een heel krachtige computer. Door systemen beschikbaar te maken via Remote Desktop Services kunnen de werknemers overal een krachtige computer ter beschikking hebben.
 
 
 
