--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -14,11 +14,11 @@
 Deze bachelorproef zou niet tot stand kunnen gekomen zijn zonder een aantal mensen die mij bij het schrijven hiervan hebben geholpen. Ik zou de volgende personen daarom ook uitgebreid willen bedanken:
 
 \begin{itemize}
-	\item Mijn co-promotor, Steven Blomme, voor het aanreiken van dit onderwerp en het verlenen van hulp wanneer ik dit nodig had. Zonder hem was ik nooit bij dit onderwerp gekomen. Ook wil ik hem bedanken voor het in contact brengen van mezelf met Mathias Alleyn zodat ik een Citrix platform kreeg om tests mee uit te voeren
-	
-	\item Mijn promotor, Dirk Thijs, voor het inhoudelijk beoordelen van mijn bachelorproef.
-	
-	\item Mathias Alleyn, omdat hij mij voorzag van een Citrix platform.
-	
-	\item Mijn ouders voor de steun tijdens deze toch wel drukke periode.
+	\item Mijn co-promotor, Steven Blomme, voor het aanreiken van dit onderwerp en het verlenen van hulp wanneer ik dit nodig had. Zonder hem was ik nooit bij dit onderwerp gekomen. Ook wil ik hem bedanken voor het in contact brengen van mezelf met Mathias Alleyn zodat ik een Citrix platform verkreeg om tests mee uit te voeren.
+	\newline
+	\item Mijn promotor, Dirk Thijs, voor de ondersteuning in het onderzoeksproces van mijn bachelorproef.
+	\newline
+	\item Mathias Alleyn, voor het voorzien van een Citrix Workspace.
+	\newline
+	\item Mijn ouders: Luc Lapage en Lieve Van Durme: voor de steun tijdens deze toch wel drukke periode.
 \end{itemize}
