--- a/inleiding.tex
+++ b/inleiding.tex
@@ -16,7 +16,7 @@ De onderzoeksvragen waarrond deze bachelorproef draait zijn dus:
 \begin{itemize}
 \item Wat zijn de verschillen tussen Citrix XenApp en Citrix XenDesktop?
 \item Welk Citrix product is voor Orbid het interessantst?
-\begin{itemize}
+\end{itemize}
 	
 Het spreekt voor zich dat er eerst op zoek wordt gegaan naar de mogelijkheden en de verschillen tussen deze 2 producten alvorens er kan gekeken worden naar welk product er nu het meest geschikt is voor Orbid.
 
@@ -47,21 +47,24 @@ Alle tests worden uitgevoerd in een Citrix Workspace. Mijn testomgeving omvat:
 	\item XenMobile 10.7
 	\item NetScaler 12.0 (Build 53.13)
 	\item StoreFront 3.12
-	\newline
-	Hosted Desktops & VDIs (Including Linux and Windows 10)
+\end{itemize}
+Hosted Desktops en VDI's
+\begin{itemize}
 	\item Windows Server 2012
 	\item Windows Serevr 2016
 	\item Windows 7
 	\item Windows 10
-	\newline
-	Hosted Applications:
+\end{itemize}
+Hosted Applications:
+\begin{itemize}	
 	\item Office 2013/2016
 	\item Healthcare
 	\item Financial
 	\item Sales
 	\item Admin Tools
-	\newline
-	Mobile Applications:
+\end{itemize}
+Mobile Applications:
+\begin{itemize}
 	\item Secure Mail
 	\item Secure Web
 	\item Secure Notes
@@ -70,9 +73,9 @@ Alle tests worden uitgevoerd in een Citrix Workspace. Mijn testomgeving omvat:
 	\item Receiver
 	\item ShareFile StorageZones Controller 5.1
 	\item AppDNA 7.15
-	
-	\newline
-	Platform details :
+\end{itemize}
+Platform details :
+\begin{itemize}
 	\item Citrix XenServer 7.0
 	\item 128 GB Ram
 	
