Update klad naar tex

--- a/bachproef-tin.bib
+++ b/bachproef-tin.bib
@@ -1,26 +1,134 @@
-@book{Knuth1998,
- author = {Knuth, Donald E.},
- title = {The art of computer programming,  volume 3: (2nd ed.) sorting and searching},
- year = {1998},
- publisher = {Addison Wesley Longman Publishing Co., Inc.},
- address = {Redwood City, CA, USA}
+% Encoding: UTF-8
+
+@Online{Yahoo2017,
+  author  = {Yahoo},
+  title   = {Citrix Systems, Inc.},
+  year    = {2017},
+  url     = {https://finance.yahoo.com/quote/CTXS/financials?p=CTXS},
+  urldate = {2017-12-06},
 }
 
-@book{Pollefliet2011,
-  author = {Pollefliet, Leen},
-  title = {Schrijven van verslag tot eindwerk: do's en don'ts},
-  year = {2011},
-  publisher = {Academia Press},
-  address = {Gent}
+@Online{Rouse2011,
+  author  = {Margaret Rouse},
+  title   = {Citrix XenApp},
+  year    = {2011},
+  url     = {http://searchvirtualdesktop.techtarget.com/definition/Citrix-XenApp},
+  urldate = {2017-12-05},
 }
 
-@article{Creeger2009,
-  author = {Creeger, Mache},
-  journal = {Communications of the ACM},
-  number = {8},
-  pages = {50--56},
-  title = {{CTO Roundtable: Cloud Computing}},
-  volume = {52},
-  year = {2009}
+@Online{Ricknaes2008,
+  author  = {Mikael Ricknäs},
+  title   = {Citrix sets price and release date for XenDesktop},
+  date    = {2008-04-14},
+  url     = {https://www.citrix.nl/glossary/vdi.html},
+  urldate = {2017-12-03},
 }
 
+@Online{Citrix2017,
+  author  = {Citrix},
+  title   = {What is VDI? What is VDI?},
+  year    = {2017},
+  url     = {https://www.citrix.nl/glossary/vdi.html},
+  urldate = {2017-11-19},
+}
+
+@Online{Citrix2014,
+  author  = {Citrix},
+  title   = {The Citrix Story - 25 Years of Imagination, Innovation and Growth The Citrix Story - 25 Years of Imagination, Innovation and Growth The Citrix Story - 25 Years of Imagination, Innovation and Growth The Citrix Story - 25 Years of Imagination, Innovation and Growth},
+  date    = {2014-01-24},
+  url     = {https://www.youtube.com/watch?v=Y9-5ObZfBAM},
+  urldate = {2017-11-19},
+}
+
+@Online{Rouse2017,
+  author  = {Margaret Rouse},
+  title   = {virtual desktop infrastructure (VDI)},
+  year    = {2017},
+  url     = {http://searchvirtualdesktop.techtarget.com/definition/virtual-desktop-infrastructure-VDI},
+  urldate = {2017-11-19},
+}
+
+@Online{Kleyman2016,
+  author  = {Bill Kleyman},
+  title   = {VDI Graphics Delivery Options: Pros \& Cons},
+  year    = {2016},
+  date    = {2016-03-30},
+  url     = {http://www.itprotoday.com/business-resources/vdi-graphics-delivery-options-pros-cons},
+  urldate = {2017-11-19},
+}
+
+@Online{Citrix2017a,
+  author  = {Citrix},
+  title   = {Citrix Workspace},
+  year    = {2017},
+  url     = {https://www.citrix.nl/products/citrix-workspace/},
+  urldate = {2017-11-19},
+}
+
+@Online{Citrix2017b,
+  author  = {Citrix},
+  title   = {Lifecycle Milestones for XenApp \& XenDesktop},
+  year    = {2017},
+  url     = {https://www.citrix.nl/support/product-lifecycle/milestones/xenapp-xendesktop.html},
+  urldate = {2017-11-19},
+}
+
+@Online{Brown2015,
+  author  = {Jason Brown},
+  title   = {Five Key Benefits of Virtual Desktop Infrastructure (VDI)},
+  year    = {2015},
+  date    = {2015-06-11},
+  url     = {https://blog.cdw.com/cloud-computing/five-key-benefits-of-virtual-desktop-infrastructure-vdi},
+  urldate = {2017-11-19},
+}
+
+@Online{Citrix2017c,
+  author  = {Citrix},
+  title   = {Migrate faster and enjoy simplified maintenance for Office 365},
+  year    = {2017},
+  url     = {https://www.citrix.nl/products/citrix-workspace/office-365.html},
+  urldate = {2017-11-19},
+}
+
+@Online{Citrix2017d,
+  author  = {Citrix},
+  title   = {Citrix Workspace vs. the competition},
+  year    = {2017},
+  url     = {https://www.citrix.nl/products/citrix-workspace/compare.html},
+  urldate = {2017-12-03},
+}
+
+@Online{SearchVirtualDesktop2016,
+  author  = {SearchVirtualDesktop},
+  title   = {A complete guide to XenApp and XenDesktop vs. Horizon},
+  year    = {2016},
+  url     = {http://searchvirtualdesktop.techtarget.com/essentialguide/A-complete-guide-to-XenApp-and-XenDesktop-vs-Horizon},
+  urldate = {2017-12-03},
+}
+
+@Online{Stansel2005,
+  author  = {Paul Stansel},
+  title   = {Citrix Access Suite 4.0 – It’s Not Your Daddy’s MetaFrame},
+  year    = {2005},
+  date    = {2005-10-19},
+  url     = {http://techgenix.com/citrix-access-suite-4-metaframe/},
+  urldate = {2017-11-19},
+}
+
+@Online{Stewart2017,
+  author  = {Kelly M. Stewart},
+  title   = {Compare virtual apps vs. virtual desktop deployment},
+  year    = {2017},
+  date    = {2017-02-16},
+  url     = {http://searchvirtualdesktop.techtarget.com/feature/Compare-virtual-apps-vs-virtual-desktop-deployment},
+  urldate = {2017-11-19},
+}
+
+@Online{Citrix2017e,
+  author  = {Citrix},
+  year    = {2017},
+  url     = {https://www.citrix.nl/about/executives/david-henshall.html},
+  urldate = {2017-11-19},
+}
+
+@Comment{jabref-meta: databaseType:biblatex;}
