--- a/inleiding.tex
+++ b/inleiding.tex
@@ -21,68 +21,23 @@ De onderzoeksvragen waarrond deze bachelorproef draait zijn dus:
 Het spreekt voor zich dat er eerst op zoek wordt gegaan naar de mogelijkheden en de verschillen tussen deze 2 producten alvorens er kan gekeken worden naar welk product er nu het meest geschikt is voor Orbid.
 
 
-
-
 \section{Stand van zaken}
 \label{sec:stand-van-zaken}
 
 %% TODO: deze sectie (die je kan opsplitsen in verschillende secties) bevat je
 %% literatuurstudie. Vergeet niet telkens je bronnen te vermelden!
 
-Citrix Systems
-Citrix is een softwarebedrijf dat server, applicatie, desktopvirtualisatie en software as a service(SaaS) levert. Citrix werd opgericht in 1989 door wijlen Edward E. lacobucci in Richardson, Texas.
+Citrix XenApp en Citrix XenDesktop zijn 2 producten van Citrix. Vooraleer ik dieper inga op deze 2 producten, wil ik wat achtergrondinformatie meegeven over dit bedrijf.
+\subsection{Citrix Systems}
+Citrix Systems, Inc. is een internationaal Amerikaans IT-bedrijf en is in deze industrie 1 van de grootste namen. Citrix werd opgericht op 17 april 1989 door wijlen Edward E. Lacobucci in Richardson, Texas. Edward werkte hiervoor als softwareontwikkelaar bij IBM. Het hoofdkantoor van Citrix bevindt zich in Fort Lauderdale in Texas. Citrix telt ongeveer 8100 werknemers en had in 2016 een omzet van maar liefst 3,42 miljard dollar.
 
-Geschiedenis Citrix
-
-
-
-
-Wat is VDI?
-Virtual Desktop Infrastructure oftewel VDI is een techniek waarbij desktops in een virtuele omgeving gedraaid worden. Deze desktops draaien op een server. Je kan de desktop bereiken via een thin-client, pc, laptop of tablet. Een belangrijke opmerking hierbij is dat het lijkt alsof je bezig bent met een lokale installatie. Een voorbeeld van Virtual Desktop Infrastructure is in dit geval XenDesktop, hierbij gaat het om desktopvirtualisatie. XenApp is per definitie geen voorbeeld van VDI, het is namelijk een voorbeeld van applicatievirtualisatie, die applicaties draaien natuurlijk ook op een desktop waardoor je het ook kan zien als een soort van desktopvirtualisatie.
-
-Citrix Workspace
-Alle tests worden uitgevoerd in een Citrix Workspace. Mijn testomgeving omvat:
-\begin{itemize}
-	\item XenApp/XenDesktop 7.15
-	\item XenMobile 10.7
-	\item NetScaler 12.0 (Build 53.13)
-	\item StoreFront 3.12
-\end{itemize}
-Hosted Desktops en VDI's
-\begin{itemize}
-	\item Windows Server 2012
-	\item Windows Serevr 2016
-	\item Windows 7
-	\item Windows 10
-\end{itemize}
-Hosted Applications:
-\begin{itemize}	
-	\item Office 2013/2016
-	\item Healthcare
-	\item Financial
-	\item Sales
-	\item Admin Tools
-\end{itemize}
-Mobile Applications:
-\begin{itemize}
-	\item Secure Mail
-	\item Secure Web
-	\item Secure Notes
-	\item Secure Tasks
-	\item ShareFile
-	\item Receiver
-	\item ShareFile StorageZones Controller 5.1
-	\item AppDNA 7.15
-\end{itemize}
-Platform details :
-\begin{itemize}
-	\item Citrix XenServer 7.0
-	\item 128 GB Ram
-	
-\end{itemize}
-
-AFBEELDING TONEN
-
+Citrix was niet altijd even succesvol. In de beginjaren was distributed computing nu eenmaal de norm. Ze werden zelfs beschuldigd van het heruitvinden van het mainframe en van teruggaan in de tijd. Hierdoor overleefde Citrix amper de beginjaren. Het is correct om te stellen dat Citrix z’n tijd ver vooruit was door zich al voor 2000 bezig te houden met server-based computing en gecentraliseerde applicaties en data.
+\begin{figure}
+	\caption{David Henshall, CEO van Citrix}
+	\footcite{Citrix2017e}
+	\includegraphics{davidhenshall}
+\end{figure}
+De CEO van Citrix Systems is sinds juli 2017 David J. Henshall. David had hiervoor al ervaring als COO en CFO van Citrix. In 2013 en 2014 heeft hij even als tijdelijke CEO gewerkt voor Citrix. David bekleedt tevens een positie als lid van de raad van bestuur in LogMeIn en Everbridge. Het is natuurlijk niet toevallig dat die bedrijven zijn die enerzijds RDS en in security voorzien. In het verleden werkte hij bij Cypress Semiconductor en Samsung.
 
 
 \section{Probleemstelling en Onderzoeksvragen}
